<resources>
    <string name="app_name">Mockup</string>
    <string name="btnEntrar">entrar</string>
    <string name="camposenha">Senha</string>
    <string name="campoEmail">E-mail</string>
    <string name="btnEsqueceu">Esqueceu sua senha?</string>
    <string name="btnCadastre">Não é cadastrado? Cadastre-se</string>
    <string name="campoAcesso">Ou acesse com:</string>
    <string name="lipsum">    Lorem ipsum dolor sit amet,  consectetur adipiscing elit. Ut  vitae massa dapibus, rutrum nunc  et, tristique nisl. Duis suscipit leo  nulla, et varius magna finibus in.  Suspendisse henfrerit rhoncus lacinia.</string>
    <string name="campoExperimente">Experimente!</string>
    <string name="title_activity_menu">Menu</string>

    <string name="nav_header_title">A Diligência</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_exerciciomapa">Map</string>

</resources>
